# docker-bundler-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml
src/: app.py  requirements.txt
tests/: test_app.py
